# wwise2019-sdk

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
samples/IntegrationDemo/: CMakeLists.txt
samples/IntegrationDemo/DemoPages/: DemoSpatialAudio.cpp
samples/IntegrationDemo/Linux/: DemoOptionsUtil.cpp  InputMgr.cpp  InputMgr.h  IntegrationDemo.make  IntegrationDemo_Linux.make  Main.cpp  Platform.h  Render_SDL.cpp  stdafx.h
samples/IntegrationDemo/MenuSystem/: Page.cpp
samples/IntegrationDemo/Windows/: IntegrationDemoMotion_Windows_vc160.vcxproj  IntegrationDemo_Windows_vc160.vcxproj  IntegrationDemo_Windows_vc170.sln  IntegrationDemo_Windows_vc170.vcxproj
samples/IntegrationDemo/Windows/D3D12/: CommandQueue.h  RenderDevice.cpp
source/SoundEngine/AkAudiolib/: CMakeLists.txt
source/SoundEngine/AkAudiolib/Common/: ALBytesMem.cpp  ALBytesMem.h  ActivityChunk.h  Ak3DListener.cpp  Ak3DListener.h  Ak3DParams.h  AkAction.cpp  AkAction.h  AkActionActive.cpp  AkActionActive.h  AkActionBreak.cpp  AkActionBreak.h  AkActionBypassFX.cpp  AkActionBypassFX.h  AkActionDuck.cpp  AkActionDuck.h  AkActionEvent.cpp  AkActionEvent.h  AkActionExcept.cpp  AkActionExcept.h  AkActionMute.cpp  AkActionMute.h  AkActionParams.h  AkActionPause.cpp  AkActionPause.h  AkActionPlay.cpp  AkActionPlay.h  AkActionPlayAndContinue.cpp  AkActionPlayAndContinue.h  AkActionPlayEvent.cpp  AkActionPlayEvent.h  AkActionRelease.cpp  AkActionRelease.h  AkActionResetPlaylist.cpp  AkActionResetPlaylist.h  AkActionResume.cpp  AkActionResume.h  AkActionSeek.cpp  AkActionSeek.h  AkActionSetAkProp.cpp  (+287 more)
source/SoundEngine/AkAudiolib/GDX/: AkSoundEngineGDX_vc150.vcxproj  AkSoundEngineGDX_vc160.vcxproj  AkSoundEngineGDX_vc160.vcxproj.filters  stdafx.h
source/SoundEngine/AkAudiolib/GGP/: AkLEngine.cpp  AkSoundEngineGGP_vc150.vcxproj  AkSoundEngineGGP_vc150.vcxproj.filters  PlatformAudiolibDefs.h
source/SoundEngine/AkAudiolib/PS4/: AkACPManager.cpp  AkACPManager.h  AkATRAC9.h  AkAudioThread.cpp  AkAudioThread.h  AkLEngine.cpp  AkManualEvent.h  AkSink.cpp  AkSink.h  AkSoundEnginePS4_vc140.vcxproj  AkSoundEnginePS4_vc140.vcxproj.filters  AkSoundEnginePS4_vc150.vcxproj  AkSoundEnginePS4_vc160.vcxproj  AkSrcACPBase.h  AkSrcACPBase.inl  AkSrcACPHelper.cpp  AkSrcACPHelper.h  AkSrcBankAt9.cpp  AkSrcBankAt9.h  AkSrcFileAt9.cpp  AkSrcFileAt9.h  AkTls.cpp  PlatformAudiolibDefs.h
source/SoundEngine/AkAudiolib/Pellegrino/: AkATRAC9.h  AkAjm.cpp  AkAjm.h  AkAjmScheduler.cpp  AkAjmScheduler.h  AkAudioThread.cpp  AkLEngine.cpp  AkSink.cpp  AkSink.h  AkSoundEnginePellegrino_vc150.vcxproj  AkSoundEnginePellegrino_vc160.vcxproj  AkSoundEnginePellegrino_vc160.vcxproj.filters  AkSrcMediaCodecAt9.cpp  AkSrcMediaCodecAt9.h  AkTls.cpp  PlatformAudiolibDefs.h  stdafx.cpp  stdafx.h
source/SoundEngine/AkAudiolib/Win32/: AkSink.cpp  (+20 more)
source/SoundEngine/AkMemoryMgr/: CMakeLists.txt
source/SpatialAudio/: CMakeLists.txt
source/SpatialAudio/Common/: AkAcousticNode.h  AkAcousticPortal.cpp  AkAcousticPortal.h  AkAcousticRoom.cpp  AkAcousticRoom.h  AkDiffractionEdge.cpp  AkDiffractionEdge.h  AkDiffractionPath.cpp  AkDiffractionPath.h  AkGeometrySet.cpp  AkGeometrySet.h  AkImageSource.cpp  AkImageSource.h  AkOcclusionChecker.h  AkRTree.h  AkReflectInstance.cpp  AkReflectInstance.h  AkScene.cpp  AkScene.h  AkSoundGeometry.cpp  AkSoundGeometry.h  AkSpatialAudio.cpp  AkSpatialAudioCompts.cpp  AkSpatialAudioCompts.h  AkSpatialAudioPrivateTypes.h  AkSpatialAudioTasks.cpp  AkSpatialAudioTasks.h  AkStochasticPath.cpp  AkStochasticPath.h  AkStochasticReflectionEngine.cpp  AkStochasticReflectionEngine.h
source/SpatialAudio/GDX/: AkSpatialAudioGDX_vc150.vcxproj  AkSpatialAudioGDX_vc160.vcxproj  AkSpatialAudioGDX_vc160.vcxproj.filters  stdafx.cpp  stdafx.h
source/SpatialAudio/GGP/: AkSpatialAudioGGP_vc150.vcxproj  AkSpatialAudioGGP_vc150.vcxproj.filters
source/SpatialAudio/Linux/: AkSpatialAudioLinux.make
source/SpatialAudio/PS4/: AkSpatialAudioPS4_vc140.vcxproj  AkSpatialAudioPS4_vc150.vcxproj  AkSpatialAudioPS4_vc160.vcxproj
source/SpatialAudio/Pellegrino/: AkSpatialAudioPellegrino_vc150.vcxproj  AkSpatialAudioPellegrino_vc150.vcxproj.filters  AkSpatialAudioPellegrino_vc160.vcxproj  stdafx.h
source/SpatialAudio/Win32/: AkSpatialAudioWindows_vc140.vcxproj  AkSpatialAudioWindows_vc150.vcxproj  AkSpatialAudioWindows_vc160.vcxproj  AkSpatialAudioWindows_vc170.vcxproj
source/SpatialAudio/XboxOne/: AkSpatialAudioXboxOne_vc140.vcxproj  AkSpatialAudioXboxOne_vc150.vcxproj  stdafx.h
source/StreamManager/: CMakeLists.txt
source/StreamManager/Common/: AkBuddyBlockPool.h  AkDeviceBase.cpp  AkDeviceBase.h  AkDeviceBlocking.cpp  AkDeviceBlocking.h  AkDeviceDeferredLinedUp.cpp  AkDeviceDeferredLinedUp.h  AkIOMemMgr.cpp  AkIOMemMgr.h  AkStmDeferredLinedUpBase.h  AkStmDeferredLinedUpBase.inl  AkStmMemView.h  AkStreamMgr.cpp  AkStreamMgr.h  AkStreamingDefaults.h  AkTransferDeferred.cpp  AkTransferDeferred.h
source/StreamManager/GDX/: AkStreamMgrGDX_vc150.vcxproj  AkStreamMgrGDX_vc160.vcxproj  AkStreamMgrGDX_vc160.vcxproj.filters  stdafx.cpp
source/StreamManager/GGP/: AkPlatformStreamingDefaults.h  AkStreamMgr.vcxproj  AkStreamMgr.vcxproj.filters  AkStreamMgrGGP_vc150.sln  stdafx.h
source/StreamManager/Linux/: AkPlatformStreamingDefaults.h  AkStreamMgr.make  AkStreamMgrLinux.make  stdafx.cpp
source/StreamManager/POSIX/: AkIOThread.cpp  AkIOThread.h
source/StreamManager/PS4/: AkIOThread.cpp  AkIOThread.h  AkPlatformStreamingDefaults.h  AkStreamMgrPS4_vc140.vcxproj  AkStreamMgrPS4_vc150.vcxproj  AkStreamMgrPS4_vc160.vcxproj  stdafx.h
source/StreamManager/Pellegrino/: AkIOThread.cpp  AkIOThread.h  AkPlatformStreamingDefaults.h  AkStreamMgrPellegrino_vc150.vcxproj  AkStreamMgrPellegrino_vc160.vcxproj  stdafx.cpp
source/StreamManager/Win32/: AkIOThread.cpp  AkIOThread.h  AkPlatformStreamingDefaults.h  AkStreamMgrWindows_vc170.vcxproj  stdafx.h
source/StreamManager/XboxOne/: AkPlatformStreamingDefaults.h  AkStreamMgrXboxOne_vc140.vcxproj  AkStreamMgrXboxOne_vc150.vcxproj  AkStreamMgrXboxOne_vc150.vcxproj.filters  stdafx.cpp  stdafx.h
(+1438 files in other folders)
